added replay memory

--- a/example/simple_example.ipynb
+++ b/example/simple_example.ipynb
@@ -16,34 +16,112 @@
     }
    ],
    "source": [
+    "import sys\n",
+    "import os\n",
     "import torch\n",
     "import gymnasium as gym #read this https://gymnasium.farama.org/introduction/basic_usage/\n",
     "import ale_py\n",
+    "cwd = os.getcwd()\n",
+    "file_path = os.path.abspath(os.path.join(os.path.dirname(cwd), '.', 'src', 'components'))\n",
+    "os.chdir(file_path)\n",
+    "import ReplayMemory as rm\n",
+    "os.chdir(cwd)\n",
     "\n",
     "gym.register_envs(ale_py) #register ale with gymnasium api\n",
     "\n",
-    "env = gym.make('ALE/Breakout-v5', render_mode = 'human') #create the enviroment\n",
+    "env = gym.make('ALE/Breakout-v5') #create the enviroment\n",
     "observation, info = env.reset() #get initial info of enviroment\n",
     "\n",
     "episode_over = False #flag to see if we lost\n",
     "total_reward = 0 #reward is a measure of how good we are doing\n",
+    "replay_memory = rm.ReplayMemory(1000)\n",
+    "count = 0    \n",
     "\n",
     "while not episode_over: #main loop\n",
-    "\n",
+    "    \n",
     "    action = env.action_space.sample() #randomly samples available actions this is eventually the 'policy'\n",
     "\n",
-    "    obs ,rwrd, trmt, trnc, info = env.step(action) #step in enviroment get next observation, recieve reward and see if the episode ended or truncated\n",
-    "\n",
+    "    obs, rwrd, trmt, trnc, info = env.step(action) #step in enviroment get next observation, recieve reward and see if the episode ended or truncated\n",
+    "    replay_memory.push(observation, action, obs, rwrd)\n",
+    "    observation = obs\n",
+    "    \n",
     "    total_reward += rwrd #log reward gained for action\n",
     "    episode_over = trmt or trnc #break if we lost\n",
-    "\n",
+    "    count += 1\n",
     "env.close()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "698a78b1-056c-4417-b6b1-d5b4c3877c2d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[[0 0 0]\n",
+      "  [0 0 0]\n",
+      "  [0 0 0]\n",
+      "  ...\n",
+      "  [0 0 0]\n",
+      "  [0 0 0]\n",
+      "  [0 0 0]]\n",
+      "\n",
+      " [[0 0 0]\n",
+      "  [0 0 0]\n",
+      "  [0 0 0]\n",
+      "  ...\n",
+      "  [0 0 0]\n",
+      "  [0 0 0]\n",
+      "  [0 0 0]]\n",
+      "\n",
+      " [[0 0 0]\n",
+      "  [0 0 0]\n",
+      "  [0 0 0]\n",
+      "  ...\n",
+      "  [0 0 0]\n",
+      "  [0 0 0]\n",
+      "  [0 0 0]]\n",
+      "\n",
+      " ...\n",
+      "\n",
+      " [[0 0 0]\n",
+      "  [0 0 0]\n",
+      "  [0 0 0]\n",
+      "  ...\n",
+      "  [0 0 0]\n",
+      "  [0 0 0]\n",
+      "  [0 0 0]]\n",
+      "\n",
+      " [[0 0 0]\n",
+      "  [0 0 0]\n",
+      "  [0 0 0]\n",
+      "  ...\n",
+      "  [0 0 0]\n",
+      "  [0 0 0]\n",
+      "  [0 0 0]]\n",
+      "\n",
+      " [[0 0 0]\n",
+      "  [0 0 0]\n",
+      "  [0 0 0]\n",
+      "  ...\n",
+      "  [0 0 0]\n",
+      "  [0 0 0]\n",
+      "  [0 0 0]]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "sample = replay_memory.sample(1)\n",
+    "print(sample[0][2])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7f5283b4-ba2f-400c-9aa4-84c8738c6848",
    "metadata": {},
    "outputs": [],
    "source": []
