--- a/example/simple_example.ipynb
+++ b/example/simple_example.ipynb
@@ -2,16 +2,16 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "id": "bc6c533f-6e67-4f05-8151-75cbbd20c35f",
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "A.L.E: Arcade Learning Environment (version 0.11.2+ecc1138)\n",
-      "[Powered by Stella]\n"
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (2965910331.py, line 9)",
+     "output_type": "error",
+     "traceback": [
+      "  \u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[4]\u001b[39m\u001b[32m, line 9\u001b[39m\n\u001b[31m    \u001b[39m\u001b[31mimport /src/components/ReplayMemory as rm\u001b[39m\n           ^\n\u001b[31mSyntaxError\u001b[39m\u001b[31m:\u001b[39m invalid syntax\n"
      ]
     }
    ],
@@ -21,11 +21,11 @@
     "import torch\n",
     "import gymnasium as gym #read this https://gymnasium.farama.org/introduction/basic_usage/\n",
     "import ale_py\n",
-    "cwd = os.getcwd()\n",
-    "file_path = os.path.abspath(os.path.join(os.path.dirname(cwd), '.', 'src', 'components'))\n",
-    "os.chdir(file_path)\n",
-    "import ReplayMemory as rm\n",
-    "os.chdir(cwd)\n",
+    "#cwd = os.getcwd()\n",
+    "#file_path = os.path.abspath(os.path.join(os.path.dirname(cwd), '.', 'src', 'components'))\n",
+    "#os.chdir(file_path)\n",
+    "import /src/components/ReplayMemory as rm\n",
+    "#os.chdir(cwd)\n",
     "\n",
     "gym.register_envs(ale_py) #register ale with gymnasium api\n",
     "\n",
