--- a/example/simple_example.ipynb
+++ b/example/simple_example.ipynb
@@ -2,16 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
    "id": "bc6c533f-6e67-4f05-8151-75cbbd20c35f",
    "metadata": {},
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (2965910331.py, line 9)",
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'Project'",
      "output_type": "error",
      "traceback": [
-      "  \u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[4]\u001b[39m\u001b[32m, line 9\u001b[39m\n\u001b[31m    \u001b[39m\u001b[31mimport /src/components/ReplayMemory as rm\u001b[39m\n           ^\n\u001b[31mSyntaxError\u001b[39m\u001b[31m:\u001b[39m invalid syntax\n"
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mModuleNotFoundError\u001b[39m                       Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[9]\u001b[39m\u001b[32m, line 9\u001b[39m\n\u001b[32m      5\u001b[39m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01male_py\u001b[39;00m\n\u001b[32m      6\u001b[39m \u001b[38;5;66;03m#cwd = os.getcwd()\u001b[39;00m\n\u001b[32m      7\u001b[39m \u001b[38;5;66;03m#file_path = os.path.abspath(os.path.join(os.path.dirname(cwd), '.', 'src', 'components'))\u001b[39;00m\n\u001b[32m      8\u001b[39m \u001b[38;5;66;03m#os.chdir(file_path)\u001b[39;00m\n\u001b[32m----> \u001b[39m\u001b[32m9\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mProject\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01msrc\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01mcomponents\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01mReplayMemory\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01mpy\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m ReplayMemory\n\u001b[32m     10\u001b[39m \u001b[38;5;66;03m#os.chdir(cwd)\u001b[39;00m\n\u001b[32m     12\u001b[39m gym.register_envs(ale_py) \u001b[38;5;66;03m#register ale with gymnasium api\u001b[39;00m\n",
+      "\u001b[31mModuleNotFoundError\u001b[39m: No module named 'Project'"
      ]
     }
    ],
@@ -21,11 +24,8 @@
     "import torch\n",
     "import gymnasium as gym #read this https://gymnasium.farama.org/introduction/basic_usage/\n",
     "import ale_py\n",
-    "#cwd = os.getcwd()\n",
-    "#file_path = os.path.abspath(os.path.join(os.path.dirname(cwd), '.', 'src', 'components'))\n",
-    "#os.chdir(file_path)\n",
-    "import /src/components/ReplayMemory as rm\n",
-    "#os.chdir(cwd)\n",
+    "from Project.src.components.ReplayMemory.py import ReplayMemory\n",
+    "\n",
     "\n",
     "gym.register_envs(ale_py) #register ale with gymnasium api\n",
     "\n",
